--- a/src/OdeToCoffee/project.json
+++ b/src/OdeToCoffee/project.json
@@ -11,7 +11,8 @@
     "Microsoft.Extensions.Configuration.Json": "1.1.0",
     "Microsoft.AspNetCore.Diagnostics": "1.0.0",
     "Microsoft.AspNetCore.StaticFiles": "1.0.0",
-    "Microsoft.AspNetCore.Mvc": "1.0.0" 
+    "Microsoft.AspNetCore.Mvc": "1.0.0",
+    "OdeToCoffee.Model": "1.0.0-*" 
   },
 
   "tools": {
