--- a/src/OdeToCoffee.Model/project.json
+++ b/src/OdeToCoffee.Model/project.json
@@ -2,6 +2,9 @@
   "version": "1.0.0-*",
 
   "dependencies": {
+    "Microsoft.EntityFrameworkCore": "1.1.2",
+    "Microsoft.EntityFrameworkCore.SqlServer": "1.1.2",
+    "Microsoft.EntityFrameworkCore.Tools": "1.1.1",
     "NETStandard.Library": "1.6.0",
     "System.ComponentModel.Annotations": "4.3.0"
   },
