--- a/src/OdeToCoffee/appsettings.json
+++ b/src/OdeToCoffee/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=_CHANGE_ME;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=OdeToCoffeeDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
 
   "Title": "Configurable title."  
